magali/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magali
spec:
  selector:
    app: magali
  ports:
  - port: 5000
    targetPort: 5000
